--- a/src/main/resources/templates/Main.html
+++ b/src/main/resources/templates/Main.html
@@ -438,6 +438,47 @@ padding-left: 20px;
 .thanksforwatching {
 padding-top: 20px;
 }
+
+@media (max-width: 768px) {
+    .PR_card {
+        width: 100%;
+    }
+    
+    header h1 {
+        font-size: 3rem;
+    }
+
+    .img {
+        width: 80%;
+    }
+
+    .about-me {
+        font-size: 2rem;
+    }
+
+    .yunseo {
+        width: 80%;
+        height: auto;
+    }
+
+    .content {
+        gap: 15px;
+    }
+
+    .container {
+        padding-left: 10px;
+        padding-right: 10px;
+    }
+
+    .it-me {
+        font-size: 1rem;
+    }
+
+    .section {
+        min-width: 100%;
+    }
+}
+
 </style>
 </head>
 <body>
